--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,247 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/mega_menu.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/slideshow.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/base.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/skeleton.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/stylesheet.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/dresscode.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/sliders_styles.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/layout.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/effects.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/rteStyle.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/demo.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/set1.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/social_share.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/bootstrap_slider.css') }}" />
+        <link rel="stylesheet" href="{{ asset('css/animation.css') }}" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        <div class="container">
+           <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-4"><a href="#"><img class="scale-with-grid" src="images/logo.png" title="Horoscopo" alt="logo Horoscopo" /></a></div>
+              <div class="clearfix visible-xs-block" style="height:15px;"></div>
+              <div class="col-lg-8 col-md-8 col-sm-8 text-right header-home">
+                 <div class="col-lg-offset-4 col-lg-8" style="margin-top: 25px;">
+
+            <!--
+
+                BEGIN: Content of extension "module_banniere", plugin "tx_modulebanniere_pi4"
+
+            -->
+                <div class="tx-modulebanniere-pi4">
+                    <input type="hidden" id="countryUser" name="countryUser" value=""><div style="text-align: center; font-weight: bold; font-size: large;" ><div style="color: rgb(0, 0, 0); text-transform: uppercase; font-size: 1.2em;" > Horoscopo y mas Horoscopo </div><div> <strong style="color:#AB0038; font-size: 2em;">+34 123 456 789</strong></div><div style="color:#575757;font-size:11px;"> 1€ Los Primeros 10 Minutos</div></div>
+                </div>
+            
+            <!-- END: Content of extension "module_banniere", plugin "tx_modulebanniere_pi4" -->
+
+            
+                 </div>
+              </div>
+            </div>
+          </div>
+    
+        <!--
+
+        BEGIN: Content of extension "module_menu", plugin "tx_modulemenu_pi1"
+
+    -->
+    <div class="tx-modulemenu-pi1">
+        <div class="container">
+              <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                  <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <span class="visible-xs-block"><a class="navbar-brand" href="#">Feminatarot</a></span>
+                </div>
+                <div class="collapse navbar-collapse js-navbar-collapse">
+                    <ul class="nav navbar-nav"><li style="display: inline;width:60px;"> <a href="/"><img src="images/home.png" /></a></li>        
+        <li class="dropdown mega-dropdown" style="display: inline;width:190px;"> 
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:195px;">Horoscopo-Astrologia<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
+          <ul class="dropdown-menu mega-dropdown-menu row">
+          
+                    <li class="col-sm-3">
+                      <ul>
+                        <!--<li class="dropdown-header"></li>-->
+                        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                          <div class="carousel-inner">
+                            <div class="item active">                              <a href="#"><img src="images/2098facf8d.jpg" class="img-responsive" alt="product 1"></a>
+                              <!--<h4><small>Summer dress floral prints</small></h4>-->
+                            </div>
+                            <div class="item ">
+                              <a href="#"><img src="images/4756e041e3.jpg" class="img-responsive" alt="product 1"></a>
+                              <!--<h4><small>Summer dress floral prints</small></h4>-->
+                            </div>    
+                          </div>
+                          <!-- End Carousel Inner -->
+                        </div>
+                        <!-- /.carousel -->
+                      </ul>
+                    </li>
+            
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Los Decanatos</li><li><a href="claravidencia/videncia-gratis/videncia-gratis-por-email/">Los Decanatos 1</a></li><li><a href="claravidencia/videncia-gratis/videncia-por-telephono/">Los Decanatos 2</a></li> <li class="divider"></li><li class="dropdown-header">Calcula tu Decanato</li><li><a href="claravidencia/tarot/el-tarot/">Decanato 1</a></li><li><a href="claravidencia/tarot/tarot-gratis-por-mail/">Decanato 2</a></li> <li class="divider"></li>
+              </ul>
+            </li>
+            
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Peque~na Guia Astrologica</li><li><a href="claravidencia/numerologia/la-numerologia/">Guia 1</a></li><li><a href="claravidencia/numerologia/numerologia-gratuita/">Guia 2</a></li><li><a href="claravidencia/numerologia/ano-personal/">Guia 3</a></li><li><a href="claravidencia/numerologia/camino-de-vida/">Guia 4</a></li> <li class="divider"></li>
+              </ul>
+            </li></ul>
+
+        </li>        
+        <li class="dropdown mega-dropdown" style="display: inline;width:200px;"> 
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:205px;">Tu Signo en Astrologia<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
+          <ul class="dropdown-menu mega-dropdown-menu row">
+          
+                    <li class="col-sm-3">
+                      <ul>
+                        <!--<li class="dropdown-header"></li>-->
+                        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                          <div class="carousel-inner">
+                            <div class="item active">
+                              <a href="#"><img src="images/2da10bdcf7.jpg" class="img-responsive" alt="product 1"></a>
+                              <!--<h4><small>Summer dress floral prints</small></h4>-->
+                            </div>
+                            <div class="item ">
+                              <a href="#"><img src="images/15595cefc6.jpg" class="img-responsive" alt="product 1"></a>
+                              <!--<h4><small>Summer dress floral prints</small></h4>-->
+                            </div>    
+                          </div>
+                          <!-- End Carousel Inner -->
+                        </div>
+                        <!-- /.carousel -->
+                      </ul>
+                    </li>
+            
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Horóscopo Gratis</li><li><a href="horoscopo/horoscopo-gratis/horoscopo-del-dia/">Horóscopo del dia</a></li><li><a href="horoscopo/horoscopo-gratis/horoscopo-del-mes/">Horóscopo del mes</a></li> <li class="divider"></li><li class="dropdown-header">Astrología</li><li><a href="horoscopo/astrologia/calcula-tu-decanato/">Calcula tu decanato</a></li><li><a href="horoscopo/astrologia/significado-de-astrologia/">Significado de Astrología</a></li><li><a href="horoscopo/astrologia/tu-signo-del-zodiaco/">Tu signo del zodiaco</a></li> <li class="divider"></li>
+              </ul>
+            </li>
+            
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Astrología China</li><li><a href="horoscopo/astrologia-china/calculo-signo-chino/">Cálculo Signo Chino</a></li><li><a href="horoscopo/astrologia-china/el-calendario-chino/">El calendario chino</a></li><li><a href="horoscopo/astrologia-china/los-doce-signos-del-zodiaco-chino/">Los doce Signos del Zodiaco Chino</a></li> <li class="divider"></li><li class="dropdown-header"></li>
+              </ul>
+            </li></ul>
+
+        </li>        
+        <li class="dropdown mega-dropdown" style="display: inline;width:130px;"> 
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:135px;">Clarividencia<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
+          <ul class="dropdown-menu mega-dropdown-menu row">
+          
+            
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Coaching</li><li><a href="psico/coaching/el-coaching/">El Coaching</a></li> <li class="divider"></li><li class="dropdown-header">Desarrollo personal</li><li><a href="psico/desarrollo-personal/la-hipnosis/">La hipnosis</a></li><li><a href="psico/desarrollo-personal/pnl/">PNL</a></li><li><a href="psico/desarrollo-personal/la-sofrologia/">La sofrología</a></li> <li class="divider"></li>
+              </ul>
+            </li>
+            
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Psicología Esotérica</li><li><a href="psico/psicologia-esoterica/parapsicologia/">Parapsicología</a></li><li><a href="psico/psicologia-esoterica/eneagrama/">Eneagrama</a></li> <li class="divider"></li><li class="dropdown-header">Tests Psico</li><li><a href="psico/tests-psico/que-seductora-eres/">Que seductora eres?</a></li><li><a href="psico/tests-psico/test-de-compatibilidad/">Test de compatibilidad</a></li><li><a href="psico/tests-psico/idea-positiva/">Idea positiva</a></li> <li class="divider"></li>
+              </ul>
+            </li></ul>
+
+        </li>        
+        <li class="dropdown mega-dropdown" style="display: inline;width:130px;"> 
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:135px;">Amor & sexo<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
+          <ul class="dropdown-menu mega-dropdown-menu row">
+          
+            
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Pareja</li><li><a href="amor-sexo/pareja/amor-virtual/">Amor virtual</a></li><li><a href="amor-sexo/pareja/la-adiccion-a-paginas-web-de-contactos/">La adicción a paginas web de contactos</a></li><li><a href="amor-sexo/pareja/soledad/">Soledad</a></li><li><a href="amor-sexo/pareja/separaciones/">Separaciones</a></li> <li class="divider"></li>
+              </ul>
+            </li>
+            
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Sexualidad</li><li><a href="amor-sexo/sexualidad/el-punto-g/">El punto G</a></li><li><a href="amor-sexo/sexualidad/kamasutra/">Kamasutra</a></li><li><a href="amor-sexo/sexualidad/sexo-tantrico/">Sexo tántrico</a></li><li><a href="amor-sexo/sexualidad/tao/">Tao</a></li> <li class="divider"></li>
+              </ul>
+            </li></ul>
+
+        </li>        
+        <li class="dropdown mega-dropdown" style="display: inline;width:150px;"> 
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:155px;"> Las Posiciones<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
+          <ul class="dropdown-menu mega-dropdown-menu row">
+          
+            
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">El bienestar personal</li><li><a href="en-forma/el-bienestar-personal/el-rincon-delgadez/">El rincon delgadez</a></li><li><a href="en-forma/el-bienestar-personal/fatiga-y-estres/">Fatiga y estrés</a></li><li><a href="en-forma/el-bienestar-personal/ayurveda/">Ayurveda</a></li> <li class="divider"></li><li class="dropdown-header">Bienestar</li><li><a href="en-forma/bienestar/meditacion/">Meditación</a></li><li><a href="en-forma/bienestar/relajacion/">Relajacion</a></li> <li class="divider"></li>
+              </ul>
+            </li></ul>
+
+        </li>
+        <li class="dropdown mega-dropdown" style="display: inline;width:110px;"> 
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:115px;"> En Forma<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
+          <ul class="dropdown-menu mega-dropdown-menu row">
+          
+            
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">El bienestar personal</li><li><a href="en-forma/el-bienestar-personal/el-rincon-delgadez/">El rincon delgadez</a></li><li><a href="en-forma/el-bienestar-personal/fatiga-y-estres/">Fatiga y estrés</a></li><li><a href="en-forma/el-bienestar-personal/ayurveda/">Ayurveda</a></li> <li class="divider"></li><li class="dropdown-header">Bienestar</li><li><a href="en-forma/bienestar/meditacion/">Meditación</a></li><li><a href="en-forma/bienestar/relajacion/">Relajacion</a></li> <li class="divider"></li>
+              </ul>
+            </li></ul>
+
+        </li></ul>
+                </div>
+              </nav>
+              </div>
+    </div>
+    
+    <!-- END: Content of extension "module_menu", plugin "tx_modulemenu_pi1" -->    
+
+
+
         {% block body %}{% endblock %}
+
+
+<div class="pied_footer col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-top:8px">
+    
+
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+        Copyright © 2019 HOROSCOPO - 
+        <nav><ul><li><a href="information/politicas-de-privacidad/" target="_self" onfocus="blurLink(this);"  >Políticas de privacidad</a></li>&nbsp;&nbsp;&nbsp;&nbsp;<li><a href="information/condiciones-generales-de-venta/" target="_self" onfocus="blurLink(this);"  >Condiciones generales de venta</a></li>&nbsp;&nbsp;&nbsp;&nbsp;<li><a href="rubriques/mapa-del-sitio/" target="_self" onfocus="blurLink(this);"  >Mapa del sitio</a></li>&nbsp;&nbsp;&nbsp;&nbsp;</ul></nav>
+        - <a class="cnil-config-button-footer" name="cnil-cancel">Gestionado desde cookies</a>
+    </div>
+    
+
+</div>
+
+
         {% block javascripts %}{% endblock %}
+
+        <script src="https://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="js/javascript_93077bb238.js?1516954122" type="text/javascript"></script>
+
+        <script type="text/javascript"> 
+  $(window).load(function() { 
+    $('.slider-home:first-child').addClass('active'); 
+        var nbImage = ($(".slider-home").length);
+        var i = 0;
+        $(".carousel-indicators").html('');
+        for (i=0;i<nbImage;i++){
+            if (i==0)$(".carousel-indicators").append('<li data-target="#carousel-example-generic" data-slide-to="'+i+'" class="active" ></li>');
+            else $(".carousel-indicators").append('<li data-target="#carousel-example-generic" data-slide-to="'+i+'"></li>');
+        }
+  }); 
+</script>
+
+
     </body>
 </html>
