--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -90,13 +90,17 @@
             
             <li class="col-sm-3">
               <ul>
-                <li class="dropdown-header">Los Decanatos</li><li><a href="claravidencia/videncia-gratis/videncia-gratis-por-email/">Los Decanatos 1</a></li><li><a href="claravidencia/videncia-gratis/videncia-por-telephono/">Los Decanatos 2</a></li> <li class="divider"></li><li class="dropdown-header">Calcula tu Decanato</li><li><a href="claravidencia/tarot/el-tarot/">Decanato 1</a></li><li><a href="claravidencia/tarot/tarot-gratis-por-mail/">Decanato 2</a></li> <li class="divider"></li>
+                <li class="dropdown-header">Los Decanatos</li> 
+                <li class="divider"></li>
+                <li class="dropdown-header">Calcula tu Decanato</li>
+                <li class="divider"></li>
               </ul>
             </li>
             
             <li class="col-sm-3">
               <ul>
-                <li class="dropdown-header">Peque~na Guia Astrologica</li><li><a href="claravidencia/numerologia/la-numerologia/">Guia 1</a></li><li><a href="claravidencia/numerologia/numerologia-gratuita/">Guia 2</a></li><li><a href="claravidencia/numerologia/ano-personal/">Guia 3</a></li><li><a href="claravidencia/numerologia/camino-de-vida/">Guia 4</a></li> <li class="divider"></li>
+                <li class="dropdown-header">Peque~na Guia Astrologica</li>
+                <li class="divider"></li>
               </ul>
             </li></ul>
 
@@ -105,71 +109,120 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:205px;">Tu Signo en Astrologia<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
           <ul class="dropdown-menu mega-dropdown-menu row">
           
-                    <li class="col-sm-3">
-                      <ul>
-                        <!--<li class="dropdown-header"></li>-->
-                        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                          <div class="carousel-inner">
-                            <div class="item active">
-                              <a href="#"><img src="images/2da10bdcf7.jpg" class="img-responsive" alt="product 1"></a>
-                              <!--<h4><small>Summer dress floral prints</small></h4>-->
-                            </div>
-                            <div class="item ">
-                              <a href="#"><img src="images/15595cefc6.jpg" class="img-responsive" alt="product 1"></a>
-                              <!--<h4><small>Summer dress floral prints</small></h4>-->
-                            </div>    
-                          </div>
-                          <!-- End Carousel Inner -->
-                        </div>
-                        <!-- /.carousel -->
-                      </ul>
-                    </li>
-            
             <li class="col-sm-3">
               <ul>
-                <li class="dropdown-header">Horóscopo Gratis</li><li><a href="horoscopo/horoscopo-gratis/horoscopo-del-dia/">Horóscopo del dia</a></li><li><a href="horoscopo/horoscopo-gratis/horoscopo-del-mes/">Horóscopo del mes</a></li> <li class="divider"></li><li class="dropdown-header">Astrología</li><li><a href="horoscopo/astrologia/calcula-tu-decanato/">Calcula tu decanato</a></li><li><a href="horoscopo/astrologia/significado-de-astrologia/">Significado de Astrología</a></li><li><a href="horoscopo/astrologia/tu-signo-del-zodiaco/">Tu signo del zodiaco</a></li> <li class="divider"></li>
+                <!--<li class="dropdown-header"></li>-->
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <a href="#"><img src="images/2da10bdcf7.jpg" class="img-responsive" alt="product 1"></a>
+                      <!--<h4><small>Summer dress floral prints</small></h4>-->
+                    </div>
+                    <div class="item ">
+                      <a href="#"><img src="images/15595cefc6.jpg" class="img-responsive" alt="product 1"></a>
+                      <!--<h4><small>Summer dress floral prints</small></h4>-->
+                    </div>    
+                  </div>
+                  <!-- End Carousel Inner -->
+                </div>
+                <!-- /.carousel -->
               </ul>
             </li>
             
             <li class="col-sm-3">
               <ul>
-                <li class="dropdown-header">Astrología China</li><li><a href="horoscopo/astrologia-china/calculo-signo-chino/">Cálculo Signo Chino</a></li><li><a href="horoscopo/astrologia-china/el-calendario-chino/">El calendario chino</a></li><li><a href="horoscopo/astrologia-china/los-doce-signos-del-zodiaco-chino/">Los doce Signos del Zodiaco Chino</a></li> <li class="divider"></li><li class="dropdown-header"></li>
+                <li class="dropdown-header">Los Signos del Zodiaco</li>
+                <li class="divider"></li>
+              </ul>
+            </li>
+            
+            <li class="col-sm-6">
+              <ul>
+                <li class="dropdown-header">Características de los Signos Zodiacales</li>
+                <li class="divider"></li><li class="dropdown-header"></li>
               </ul>
             </li></ul>
 
         </li>        
         <li class="dropdown mega-dropdown" style="display: inline;width:130px;"> 
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:135px;">Clarividencia<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
+
           <ul class="dropdown-menu mega-dropdown-menu row">
           
-            
             <li class="col-sm-3">
               <ul>
-                <li class="dropdown-header">Coaching</li><li><a href="psico/coaching/el-coaching/">El Coaching</a></li> <li class="divider"></li><li class="dropdown-header">Desarrollo personal</li><li><a href="psico/desarrollo-personal/la-hipnosis/">La hipnosis</a></li><li><a href="psico/desarrollo-personal/pnl/">PNL</a></li><li><a href="psico/desarrollo-personal/la-sofrologia/">La sofrología</a></li> <li class="divider"></li>
+                <!--<li class="dropdown-header"></li>-->
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <a href="#"><img src="images/2da10bdcf7.jpg" class="img-responsive" alt="product 1"></a>
+                      <!--<h4><small>Summer dress floral prints</small></h4>-->
+                    </div>
+                    <div class="item ">
+                      <a href="#"><img src="images/15595cefc6.jpg" class="img-responsive" alt="product 1"></a>
+                      <!--<h4><small>Summer dress floral prints</small></h4>-->
+                    </div>    
+                  </div>
+                  <!-- End Carousel Inner -->
+                </div>
+                <!-- /.carousel -->
+              </ul>
+            </li>
+
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">La Numerología</li>
+                <li class="divider"></li>
               </ul>
             </li>
             
-            <li class="col-sm-3">
-              <ul>
-                <li class="dropdown-header">Psicología Esotérica</li><li><a href="psico/psicologia-esoterica/parapsicologia/">Parapsicología</a></li><li><a href="psico/psicologia-esoterica/eneagrama/">Eneagrama</a></li> <li class="divider"></li><li class="dropdown-header">Tests Psico</li><li><a href="psico/tests-psico/que-seductora-eres/">Que seductora eres?</a></li><li><a href="psico/tests-psico/test-de-compatibilidad/">Test de compatibilidad</a></li><li><a href="psico/tests-psico/idea-positiva/">Idea positiva</a></li> <li class="divider"></li>
-              </ul>
-            </li></ul>
+            </ul>
+        </li>
 
-        </li>        
         <li class="dropdown mega-dropdown" style="display: inline;width:130px;"> 
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:135px;">Amor & sexo<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
           <ul class="dropdown-menu mega-dropdown-menu row">
           
+            <li class="col-sm-3">
+              <ul>
+                <!--<li class="dropdown-header"></li>-->
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <a href="#"><img src="images/2da10bdcf7.jpg" class="img-responsive" alt="product 1"></a>
+                      <!--<h4><small>Summer dress floral prints</small></h4>-->
+                    </div>
+                    <div class="item ">
+                      <a href="#"><img src="images/15595cefc6.jpg" class="img-responsive" alt="product 1"></a>
+                      <!--<h4><small>Summer dress floral prints</small></h4>-->
+                    </div>    
+                  </div>
+                  <!-- End Carousel Inner -->
+                </div>
+                <!-- /.carousel -->
+              </ul>
+            </li>
+          
             
             <li class="col-sm-3">
               <ul>
-                <li class="dropdown-header">Pareja</li><li><a href="amor-sexo/pareja/amor-virtual/">Amor virtual</a></li><li><a href="amor-sexo/pareja/la-adiccion-a-paginas-web-de-contactos/">La adicción a paginas web de contactos</a></li><li><a href="amor-sexo/pareja/soledad/">Soledad</a></li><li><a href="amor-sexo/pareja/separaciones/">Separaciones</a></li> <li class="divider"></li>
+                <li class="dropdown-header">El Punto G</li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Kamasutra</li>
+                <li class="divider"></li>
+                <li class="dropdown-header">El Papel de la Mujer</li>
+                <li class="divider"></li>
               </ul>
             </li>
             
             <li class="col-sm-3">
               <ul>
-                <li class="dropdown-header">Sexualidad</li><li><a href="amor-sexo/sexualidad/el-punto-g/">El punto G</a></li><li><a href="amor-sexo/sexualidad/kamasutra/">Kamasutra</a></li><li><a href="amor-sexo/sexualidad/sexo-tantrico/">Sexo tántrico</a></li><li><a href="amor-sexo/sexualidad/tao/">Tao</a></li> <li class="divider"></li>
+                <li class="dropdown-header">Besos</li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Las Posiciones</li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Sexo Tántrico</li>
+                <li class="divider"></li>
               </ul>
             </li></ul>
 
@@ -178,24 +231,68 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:155px;"> Las Posiciones<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
           <ul class="dropdown-menu mega-dropdown-menu row">
           
-            
             <li class="col-sm-3">
               <ul>
-                <li class="dropdown-header">El bienestar personal</li><li><a href="en-forma/el-bienestar-personal/el-rincon-delgadez/">El rincon delgadez</a></li><li><a href="en-forma/el-bienestar-personal/fatiga-y-estres/">Fatiga y estrés</a></li><li><a href="en-forma/el-bienestar-personal/ayurveda/">Ayurveda</a></li> <li class="divider"></li><li class="dropdown-header">Bienestar</li><li><a href="en-forma/bienestar/meditacion/">Meditación</a></li><li><a href="en-forma/bienestar/relajacion/">Relajacion</a></li> <li class="divider"></li>
+                <!--<li class="dropdown-header"></li>-->
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <a href="#"><img src="images/2da10bdcf7.jpg" class="img-responsive" alt="product 1"></a>
+                      <!--<h4><small>Summer dress floral prints</small></h4>-->
+                    </div>
+                    <div class="item ">
+                      <a href="#"><img src="images/15595cefc6.jpg" class="img-responsive" alt="product 1"></a>
+                      <!--<h4><small>Summer dress floral prints</small></h4>-->
+                    </div>    
+                  </div>
+                  <!-- End Carousel Inner -->
+                </div>
+                <!-- /.carousel -->
               </ul>
-            </li></ul>
+            </li>
 
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">Categoria Vacia</li>
+                <li class="divider"></li>
+              </ul>
+            </li>
+        </ul>
         </li>
+
         <li class="dropdown mega-dropdown" style="display: inline;width:110px;"> 
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="width:115px;"> En Forma<span class="glyphicon glyphicon-chevron-down pull-right"></span></a>
           <ul class="dropdown-menu mega-dropdown-menu row">
           
-            
             <li class="col-sm-3">
               <ul>
-                <li class="dropdown-header">El bienestar personal</li><li><a href="en-forma/el-bienestar-personal/el-rincon-delgadez/">El rincon delgadez</a></li><li><a href="en-forma/el-bienestar-personal/fatiga-y-estres/">Fatiga y estrés</a></li><li><a href="en-forma/el-bienestar-personal/ayurveda/">Ayurveda</a></li> <li class="divider"></li><li class="dropdown-header">Bienestar</li><li><a href="en-forma/bienestar/meditacion/">Meditación</a></li><li><a href="en-forma/bienestar/relajacion/">Relajacion</a></li> <li class="divider"></li>
+                <!--<li class="dropdown-header"></li>-->
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <a href="#"><img src="images/2da10bdcf7.jpg" class="img-responsive" alt="product 1"></a>
+                      <!--<h4><small>Summer dress floral prints</small></h4>-->
+                    </div>
+                    <div class="item ">
+                      <a href="#"><img src="images/15595cefc6.jpg" class="img-responsive" alt="product 1"></a>
+                      <!--<h4><small>Summer dress floral prints</small></h4>-->
+                    </div>    
+                  </div>
+                  <!-- End Carousel Inner -->
+                </div>
+                <!-- /.carousel -->
               </ul>
-            </li></ul>
+            </li>
+
+            <li class="col-sm-3">
+              <ul>
+                <li class="dropdown-header">La Meditacion</li>
+                <li class="divider"></li>
+                <li class="dropdown-header">La Relajacion</li>
+                <li class="divider"></li>
+              </ul>
+            </li>
+        </ul>
 
         </li></ul>
                 </div>
