--- a/app/Resources/views/horoscopo/index.html.twig
+++ b/app/Resources/views/horoscopo/index.html.twig
@@ -74,7 +74,8 @@
     </div> 
   </div>
   <div class="row"> 
-    <p><div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 img-banniere" style="padding:5px 5px;">
+    <p>
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 img-banniere" style="padding:5px 5px;">
     <div class="effect-sadie images-home" style="  ">
       <a href="claravidencia/tarot/tarot-gratis-por-mail/" style="text-decoration: none">
         <img src="images/e88fc57b74.jpg" width="315" height="210" alt="Tirada de Cartas Gratis Preguntas de Amor" />
