--- a/app/Resources/views/horoscopo/sexo.html.twig
+++ b/app/Resources/views/horoscopo/sexo.html.twig
@@ -7,7 +7,7 @@
 <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-        <div class="col-lg-4 order-lg-1 text-white showcase-img" style="background-image: url('img/bg-showcase-4.jpg');"></div>
+        <div class="col-lg-4 order-lg-1 text-white showcase-img" style="background-image: url('img/bg-showcase-4.jpg'); background-size: 100% 100%;"></div>
         <div class="col-lg-8 order-lg-2 my-auto showcase-text">
           <h2>Amor y Sexo</h2>
             <p class="lead mb-0">
