--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,6 +11,8 @@
   <!-- Bootstrap core CSS -->
   <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
 
+  <link rel="icon" type="image/x-icon" href="{{ asset('img/favicon.ico') }}" />
+
   <!-- Custom fonts for this template -->
   <link href="{{ asset('fontawesome-free/css/all.min.css') }}" rel="stylesheet">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
