--- a/app/Resources/views/horoscopo/posiciones.html.twig
+++ b/app/Resources/views/horoscopo/posiciones.html.twig
@@ -2,20 +2,85 @@
 
 {% block title %}Horoscopo{% endblock %}
 
+
 {% block body %}
 
 <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-        <div class="col-lg-4 order-lg-1 text-white showcase-img" style="background-image: url('img/bg-showcase-5.jpg');"></div>
+        <div class="col-lg-4 order-lg-1 text-white showcase-img" style="background-image: url('img/bg-showcase-5.jpg');  background-size: 100% 100%;"></div>
         <div class="col-lg-8 order-lg-2 my-auto showcase-text">
           <h2>Las Posiciones</h2>
-          <p class="lead mb-0">
-                        <ul class="list-unstyled">
-                        </ul>
-            </p>
 		  <hr>
-		  <p>El Kama Sutra viene de la palabra sánscrita "kama" que significa deseo (también el nombre del dios del amor, equivalente a Eros o Cupido) y la palabra "sutra" que se traducen como siendo un aforismo de deseo</p>
+		  <p style="text-align: justify">El Kama Sutra viene de la palabra sánscrita "kama" que significa deseo (también el nombre del dios del amor, equivalente a Eros o Cupido) y la palabra "sutra" que se traducen como siendo un aforismo de deseo</p>
+          <div class="row">
+
+          <div class="col-2 col-lg-2 col-sm-2 offset-sm-1">
+            <div class="row">
+                <a href="{{ url('carretilla') }}" style="text-decoration: none;">
+                <div class="col-lg-12 col-sm-12">
+                    <img src="{{ asset('img/Carretilla.jpg') }}" style="height: 12vw;" class="img-thumbnail rounded float-left" alt="La Carretilla">
+                </div>
+                <div class="col-lg-12 col-sm-12">
+                    <p style="font-size: 0.7em; text-align: center;">La Carretilla</p>
+                </div>
+                </a>
+            </div>
+          </div>
+
+          <div class="col-2 col-lg-2 col-sm-2">
+            <div class="row">
+                <a href="{{ url('fuerzag') }}" style="text-decoration: none;">
+                <div class="col-lg-12 col-sm-12">
+                    <img src="{{ asset('img/FuerzaG.jpg') }}" style="height: 12vw;" class="img-thumbnail rounded float-left" alt="La Fuerza G">
+                </div>
+                <div class="col-lg-12 col-sm-12">
+                    <p style="font-size: 0.7em; text-align: center;">La Fuerza G</p>
+                </div>
+                </a>
+            </div>
+          </div>
+
+          <div class="col-2 col-lg-2 col-sm-2">
+            <div class="row">
+                <a href="{{ url('jinete') }}" style="text-decoration: none;">
+                <div class="col-lg-12 col-sm-12">
+                    <img src="{{ asset('img/Jinete.jpg') }}" style="height: 12vw;" class="img-thumbnail rounded float-left" alt="La Jinete">
+                </div>
+                <div class="col-lg-12 col-sm-12">
+                    <p style="font-size: 0.7em; text-align: center;">La Jinete</p>
+                </div>
+                </a>
+            </div>
+          </div>
+
+          <div class="col-2 col-lg-2 col-sm-2">
+            <div class="row">
+                <a href="{{ url('tumbona') }}" style="text-decoration: none;">
+                <div class="col-lg-12 col-sm-12">
+                    <img src="{{ asset('img/Tumbona.jpg') }}" style="height: 12vw;" class="img-thumbnail rounded float-left" alt="La Tumbona">
+                </div>
+                <div class="col-lg-12 col-sm-12">
+                    <p style="font-size: 0.7em; text-align: center;">La Tumbona</p>
+                </div>
+                </a>
+            </div>
+          </div>
+
+          <div class="col-2 col-lg-2 col-sm-2">
+            <div class="row">
+                <a href="{{ url('desafio') }}" style="text-decoration: none;">
+                <div class="col-lg-12 col-sm-12">
+                    <img src="{{ asset('img/Desafio.jpg') }}" style="height: 12vw;" class="img-thumbnail rounded float-left" alt="El Desafio">
+                </div>
+                <div class="col-lg-12 col-sm-12">
+                    <p style="font-size: 0.7em; text-align: center;">El Desafio</p>
+                </div>
+                </a>
+            </div>
+          </div>
+      </div>
+      
         </div>
       </div>
       <br>
