--- a/app/Resources/views/horoscopo/fuerzag.html.twig
+++ b/app/Resources/views/horoscopo/fuerzag.html.twig
@@ -9,8 +9,8 @@
     <div class="container-fluid p-0">
       <div class="row">
       <div class="col-lg-10 col-sm-12">
+        <h1 style="text-align: center;">La Fuerza G</h1>
         <div class="row">
-            
             <img src="{{ asset('img/FuerzaG.jpg') }}" height="100%" width="100%" alt="La Fuerza G">
 
         </div>
