--- a/app/Resources/views/horoscopo/posiciones.html.twig
+++ b/app/Resources/views/horoscopo/posiciones.html.twig
@@ -13,68 +13,70 @@
           <h2>Las Posiciones</h2>
 		  <hr>
 		  <p style="text-align: justify">El Kama Sutra viene de la palabra sánscrita "kama" que significa deseo (también el nombre del dios del amor, equivalente a Eros o Cupido) y la palabra "sutra" que se traducen como siendo un aforismo de deseo</p>
-          <div class="row">
 
-          <div class="col-2 col-lg-2 col-sm-2 offset-sm-1">
+          <div class="row">
+          <div class="col-4 col-lg-4 col-sm-4">
             <div class="row">
                 <a href="{{ url('carretilla') }}" style="text-decoration: none;">
                 <div class="col-lg-12 col-sm-12">
-                    <img src="{{ asset('img/Carretilla.jpg') }}" style="height: 12vw;" class="img-thumbnail rounded float-left" alt="La Carretilla">
+                    <img src="{{ asset('img/Carretilla.jpg') }}" style="height: 20vw; width:20vw;" class="img-thumbnail rounded float-left" alt="La Carretilla">
                 </div>
                 <div class="col-lg-12 col-sm-12">
-                    <p style="font-size: 0.7em; text-align: center;">La Carretilla</p>
+                    <p style="font-size: 1.1em; text-align: center;">La Carretilla</p>
                 </div>
                 </a>
             </div>
           </div>
 
-          <div class="col-2 col-lg-2 col-sm-2">
+          <div class="col-4 col-lg-4 col-sm-4">
             <div class="row">
                 <a href="{{ url('fuerzag') }}" style="text-decoration: none;">
                 <div class="col-lg-12 col-sm-12">
-                    <img src="{{ asset('img/FuerzaG.jpg') }}" style="height: 12vw;" class="img-thumbnail rounded float-left" alt="La Fuerza G">
+                    <img src="{{ asset('img/FuerzaG.jpg') }}" style="height: 20vw; width:20vw;" class="img-thumbnail rounded float-left" alt="La Fuerza G">
                 </div>
                 <div class="col-lg-12 col-sm-12">
-                    <p style="font-size: 0.7em; text-align: center;">La Fuerza G</p>
+                    <p style="font-size: 1.1em; text-align: center;">La Fuerza G</p>
                 </div>
                 </a>
             </div>
           </div>
 
-          <div class="col-2 col-lg-2 col-sm-2">
+          <div class="col-4 col-lg-4 col-sm-4">
             <div class="row">
                 <a href="{{ url('jinete') }}" style="text-decoration: none;">
                 <div class="col-lg-12 col-sm-12">
-                    <img src="{{ asset('img/Jinete.jpg') }}" style="height: 12vw;" class="img-thumbnail rounded float-left" alt="La Jinete">
+                    <img src="{{ asset('img/Jinete.jpg') }}" style="height: 20vw; width:20vw;" class="img-thumbnail rounded float-left" alt="La Jinete">
                 </div>
                 <div class="col-lg-12 col-sm-12">
-                    <p style="font-size: 0.7em; text-align: center;">La Jinete</p>
+                    <p style="font-size: 1.1em; text-align: center;">La Jinete</p>
                 </div>
                 </a>
             </div>
           </div>
-
-          <div class="col-2 col-lg-2 col-sm-2">
+        </div>
+        
+        <div class="row">
+          <div class="col-4 col-lg-4 col-sm-4 offset-2">
             <div class="row">
                 <a href="{{ url('tumbona') }}" style="text-decoration: none;">
                 <div class="col-lg-12 col-sm-12">
-                    <img src="{{ asset('img/Tumbona.jpg') }}" style="height: 12vw;" class="img-thumbnail rounded float-left" alt="La Tumbona">
+                    <img src="{{ asset('img/Tumbona.jpg') }}" style="height: 20vw; width:20vw;" class="img-thumbnail rounded float-left" alt="La Tumbona">
                 </div>
                 <div class="col-lg-12 col-sm-12">
-                    <p style="font-size: 0.7em; text-align: center;">La Tumbona</p>
+                    <p style="font-size: 1.1em; text-align: center;">La Tumbona</p>
                 </div>
                 </a>
             </div>
           </div>
 
-          <div class="col-2 col-lg-2 col-sm-2">
+          <div class="col-4 col-lg-4 col-sm-4">
             <div class="row">
                 <a href="{{ url('desafio') }}" style="text-decoration: none;">
                 <div class="col-lg-12 col-sm-12">
-                    <img src="{{ asset('img/Desafio.jpg') }}" style="height: 12vw;" class="img-thumbnail rounded float-left" alt="El Desafio">
+                    <img src="{{ asset('img/Desafio.jpg') }}" style="height: 20vw; width:20vw;" class="img-thumbnail rounded float-left" alt="El Desafio">
                 </div>
                 <div class="col-lg-12 col-sm-12">
-                    <p style="font-size: 0.7em; text-align: center;">El Desafio</p>
+                    <p style="font-size: 1.1em; text-align: center;">El Desafio</p>
                 </div>
                 </a>
             </div>
