--- a/app/Resources/views/horoscopo/tumbona.html.twig
+++ b/app/Resources/views/horoscopo/tumbona.html.twig
@@ -9,8 +9,8 @@
     <div class="container-fluid p-0">
       <div class="row">
       <div class="col-lg-10 col-sm-12">
+        <h1 style="text-align: center;">La Tumbona</h1>
         <div class="row">
-            
             <img src="{{ asset('img/Tumbona.jpg') }}" height="100%" width="100%" alt="La Tumbona">
 
         </div>
